--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,11 @@
+/* Resetting default styles for all elements */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* Setting background color, text color, and font for the body */
 body {
     background-color: #292524;
     color: #fafaf9;
@@ -11,43 +13,76 @@ body {
     padding: 40px;
 }
 
+/* Styling for the header */
+.header {
+    margin-bottom: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
+/* Styling for the logo within the header */
+.logo{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+/* Styling for h1 elements, specifically the site title */
 h1 {
     font-size: 42px;
     text-transform: uppercase;
     font-family: "Coiny", Arial, serif;
     color: #fafaf9;
+    line-height: 1;
+    margin-top: 6px;
+    display: flex;
 }
 
-.header {
-    margin-bottom: 40px;
-}
-
+/* Styling for the form used to share a fact */
 .fact-form {
     background-color: #44403c;
     margin-bottom: 40px;
     padding: 16px 24px;
 }
 
+/* Styling for the main content area */
+.main{
+    
+}
 
+/* Styling for each fact */
 .fact {
     font-size: 20px;
     line-height: 1.4;
     font-family: Sono, sans-serif;
+    letter-spacing: -1px;
     background-color: #44403c;
     margin-bottom: 16px;
     padding: 16px 24px;
+    display: flex;
+    align-items: center;
+    gap: 24px;
 }
 
+/* Styling for the tag associated with each fact */
 .tag {
     text-transform: uppercase;
     font-size: 14px;
     font-family: Coiny, serif;
     color: #fafaf9;
-
+    padding-top: 3px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
+/* Removing list style for ul elements */
 ul {
     list-style-type: none;
     padding: 0;
+}
+
+/* Styling for the vote buttons associated with each fact */
+.vote-buttons{
+    margin-left: auto;
 }
