--- a/src/styles.css
+++ b/src/styles.css
@@ -1,88 +1,112 @@
 /* Resetting default styles for all elements */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* Setting background color, text color, and font for the body */
 body {
-    background-color: #292524;
-    color: #fafaf9;
-    font-family: 'Sono', sans-serif;
-    padding: 40px;
+  background-color: #292524;
+  color: #fafaf9;
+  font-family: "Sono", sans-serif;
+  padding: 40px;
+}
+
+.container {
+  max-width: 1500px;
+  margin: 0 auto;
 }
 
 /* Styling for the header */
 .header {
-    margin-bottom: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /* Styling for the logo within the header */
-.logo{
-    display: flex;
-    align-items: center;
-    gap: 16px;
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.logo > img {
+  width: 68px;
+  height: 68px;
 }
 
 /* Styling for h1 elements, specifically the site title */
 h1 {
-    font-size: 42px;
-    text-transform: uppercase;
-    font-family: "Coiny", Arial, serif;
-    color: #fafaf9;
-    line-height: 1;
-    margin-top: 6px;
-    display: flex;
+  font-size: 42px;
+  text-transform: uppercase;
+  font-family: "Coiny", Arial, serif;
+  color: #fafaf9;
+  line-height: 1;
+  margin-top: 6px;
+  display: flex;
 }
 
 /* Styling for the form used to share a fact */
 .fact-form {
-    background-color: #44403c;
-    margin-bottom: 40px;
-    padding: 16px 24px;
+  background-color: #44403c;
+  margin-bottom: 40px;
+  padding: 16px 24px;
 }
 
 /* Styling for the main content area */
-.main{
-    
+.main {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  gap: 46px;
 }
 
 /* Styling for each fact */
 .fact {
-    font-size: 20px;
-    line-height: 1.4;
-    font-family: Sono, sans-serif;
-    letter-spacing: -1px;
-    background-color: #44403c;
-    margin-bottom: 16px;
-    padding: 16px 24px;
-    display: flex;
-    align-items: center;
-    gap: 24px;
+  font-size: 20px;
+  line-height: 1.4;
+  font-family: Sono, sans-serif;
+  letter-spacing: -1px;
+  background-color: #44403c;
+  margin-bottom: 16px;
+  padding: 16px 24px;
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
 
 /* Styling for the tag associated with each fact */
 .tag {
-    text-transform: uppercase;
-    font-size: 14px;
-    font-family: Coiny, serif;
-    color: #fafaf9;
-    padding-top: 3px;
-    padding-left: 10px;
-    padding-right: 10px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-family: Coiny, serif;
+  color: #fafaf9;
+  padding-top: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 /* Removing list style for ul elements */
 ul {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 /* Styling for the vote buttons associated with each fact */
-.vote-buttons{
-    margin-left: auto;
+.vote-buttons {
+  margin-left: auto;
+}
+
+.source:link,
+.source:visited {
+  color: #a8a29e;
+    text-decoration:none;
+    margin-left: 12px;
+}
+
+.source:hover,
+.source:active{
+  color: #3b82f6;
 }
