--- a/src/styles.css
+++ b/src/styles.css
@@ -49,6 +49,10 @@ h1 {
   display: flex;
 }
 
+.category{
+    margin-bottom: 16px;
+}
+
 /* Styling for the form used to share a fact */
 .fact-form {
   background-color: #44403c;
@@ -104,9 +108,43 @@ ul {
   color: #a8a29e;
     text-decoration:none;
     margin-left: 12px;
+    transition: 1s;
+
 }
 
 .source:hover,
 .source:active{
   color: #3b82f6;
+}
+
+.btn{
+    border: none;
+    font-family: "Coiny", Arial, serif;
+    color: inherit;
+    line-height: 1;
+    text-transform: uppercase;
+    font-size: 17px;
+    padding: 16px 0 13px;
+    background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
+    transition: 0.3s;
+}
+
+.btn:hover{
+    transform: scale(110%)
+    rotate(-2deg);
+}
+
+.btn-large{
+    font-size: 20px;
+    padding: 20px 32px 17px;
+}
+
+.btn-all-categories{
+    margin-bottom: 16px;
+    width: 100%
+}
+
+.btn-category{
+    width: 100%;
+    background-image: none;
 }
